--- a/package.json
+++ b/package.json
@@ -42,19 +42,29 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0",
     "autoprefixer": "^10.4.15",
+    "cssnano": "^6.1.2",
+    "events": "^3.3.0",
     "npm-run-all": "^4.1.5",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.11.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.1.1",
     "posthtml-include": "^1.7.4",
+    "process": "^0.11.10",
     "rimraf": "^5.0.1",
-    "sharp": "^0.31.1",
+    "sharp": "^0.31.3",
+    "stream-browserify": "^3.0.0",
     "stylelint": "^16.3.1",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
-    "stylelint-scss": "^6.2.1"
+    "stylelint-scss": "^6.2.1",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "lite-youtube-embed": "^0.3.2"
   }
 }
